--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
       run: npm run build
     
     - name: Run unit tests
-      run: npm test -- --watchAll=false --coverage
+      run: npm run test:ci -- --coverage
     
     - name: Upload coverage to GitHub
       uses: actions/upload-artifact@v4
