--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: 18.x
     
     steps:
     - name: Checkout code
@@ -26,12 +26,6 @@ jobs:
     
     - name: Install dependencies
       run: npm ci
-    
-    - name: Run linting
-      run: npm run lint
-    
-    - name: Run build
-      run: npm run build
     
     - name: Run unit tests
       run: npm run test:ci -- --coverage
