--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,14 +25,17 @@ jobs:
         cache: 'npm'
     
     - name: Install dependencies
-      run: npm ci
-    
+      run: npm install
+      
     - name: Run unit tests
       run: npm run test:ci -- --coverage
-    
-    - name: Upload coverage to GitHub
-      uses: actions/upload-artifact@v4
+
+    - name: Upload coverage to CodeCov
+      uses: codecov/codecov-action@v4
       with:
-        name: coverage-report-node-${{ matrix.node-version }}
-        path: coverage/
-        retention-days: 30
+        token: ${{ secrets.CODECOV_TOKEN }}
+        file: ./coverage/lcov.info
+        flag: unittests
+        fail_ci_if_error: true
+        verbose: true
+        name: 'Unit Tests Coverage'
