--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,7 @@ on:
     branches: [ "*" ]  # Run on push to any branch
   pull_request:
     branches: [ "*" ]  # Run on pull requests to any branch
+  workflow_dispatch:  # Allow manual trigger from GitHub UI
 
 jobs:
   test:
